# Cars_project_classification

./: ,gitignore  .gitignore  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py  stanford_cars.csv
.venv-backups/35142459/: venv-main-2026-04-18-1807.txt  venv-main-latest.txt
configs/: config.yaml  eval.yaml  inference.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: stanford_cars.yaml
configs/debug/: default.yaml
configs/experiment/: baseline.yaml
configs/extras/: default.yaml
configs/hparams_search/: optuna.yaml
configs/hydra/: default.yaml
configs/local/: default.yaml
configs/logger/: tensorboard.yaml
configs/model/: classifier.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
docs/: project_plan.md  report_outline.md
notebooks/: README.md  car_project_ssh (1).ipynb  car_project_ssh.ipynb
real_time_car_detection.egg-info/: PKG-INFO  SOURCES.txt
scripts/: README.md  download_stanford_cars.py  prepare_stanford_cars.py  unpack_stanford_archives.py
src/: eval.py  train.py
src/data/: __init__.py  datamodule.py  download.py  download_stanford_cars.py  image_io.py  prepare_stanford_cars.py  preprocessing.py  unpack_stanford_archives.py
src/inference/: __init__.py  video_inference.py
src/models/: __init__.py  lightning_module.py  losses.py  multihead_classifier.py
src/utils/: __init__.py  env.py  imports.py
tests/: __init__.py
